--- a/admin/package.json
+++ b/admin/package.json
@@ -14,6 +14,7 @@
     "@types/styled-components": "^5.1.25",
     "antd": "^4.21.4",
     "axios": "^0.27.2",
+    "jotai": "^1.7.3",
     "normalize.css": "^8.0.1",
     "nprogress": "^0.2.0",
     "react": "^18.2.0",
