--- a/server/package.json
+++ b/server/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^5.0.0-alpha.7",
+    "inflection": "^1.13.2",
     "mongoose": "^5.5.6",
     "nodemon": "^2.0.18"
   }
